--- a/bootstrap/metrics-server.yaml
+++ b/bootstrap/metrics-server.yaml
@@ -7,10 +7,12 @@ spec:
   project: default
   source:
     chart: metrics-server
-    repoURL: https://kubernetes-sigs.github.io/metrics-server
-    targetRevision: 3.12.0
+    repoURL: https://github.com/IanHewlett/nano-platform-service-metrics-server/charts/metrics-server
+    targetRevision: 0.0.1
     helm:
       releaseName: metrics-server
+      valueFiles:
+        - values-local.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: kube-system
