--- a/bootstrap/metrics-server.yaml
+++ b/bootstrap/metrics-server.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: main
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: kube-system
+    namespace: argocd
   syncPolicy:
     automated:
       selfHeal: true
