--- a/bootstrap/metrics-server.yaml
+++ b/bootstrap/metrics-server.yaml
@@ -17,3 +17,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
+  syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
