--- a/bootstrap/metrics-server.yaml
+++ b/bootstrap/metrics-server.yaml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/IanHewlett/nano-platform-service-metrics-server.git
-    path: overlays/local
+    path: release
     targetRevision: main
   destination:
     server: https://kubernetes.default.svc
