--- a/bootstrap/argocd.yaml
+++ b/bootstrap/argocd.yaml
@@ -10,6 +10,7 @@ metadata:
   name: argo-cd
   namespace: argocd
 spec:
+  project: default
   source:
     path: bootstrap/argocd
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
