--- a/bootstrap/services.yaml
+++ b/bootstrap/services.yaml
@@ -10,6 +10,7 @@ metadata:
   name: services
   namespace: argocd
 spec:
+  project: default
   source:
     path: services
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
