--- a/bootstrap/argocd/kustomization.yaml
+++ b/bootstrap/argocd/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
   - argocd-ns.yaml
+  - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
+  - default-project.yaml
 configMapGenerator:
   - behavior: merge
     literals:
