--- a/services/kube-state-metrics.yaml
+++ b/services/kube-state-metrics.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metrics-server-release
+  name: kube-state-metric-release
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -10,8 +10,8 @@ spec:
   project: default
   source:
     path: overlays/local
-    repoURL: https://github.com/IanHewlett/demo-platform-service-metrics-server.git
-    targetRevision: 0.0.2
+    repoURL: https://github.com/IanHewlett/demo-platform-service-kube-state-metrics.git
+    targetRevision: 0.0.1
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
