--- a/services/kube-state-metrics.yaml
+++ b/services/kube-state-metrics.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   project: default
   source:
-    path: overlays/local
+    path: release
     repoURL: https://github.com/IanHewlett/demo-platform-service-kube-state-metrics.git
     targetRevision: 0.0.1
   destination:
