--- a/cluster/argocd.yaml
+++ b/cluster/argocd.yaml
@@ -2,16 +2,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: applications
+  name: argo-cd
   namespace: argocd
   labels:
-    app.kubernetes.io/name: applications
+    app.kubernetes.io/name: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    path: applications
+    path: cluster/argocd
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
   destination:
     namespace: argocd
@@ -22,7 +22,7 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-      - allowEmpty=true
+    - allowEmpty=true
   ignoreDifferences:
     - group: argoproj.io
       jsonPointers:
