--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   project: default
   source:
-    path: services
+    path: cluster/services
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
   destination:
     namespace: argocd
