--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -11,6 +11,7 @@ spec:
   source:
     path: cluster/services
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
+    targetRevision: 0.0.5
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
