--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
+  - cluster.yaml
   - argocd.yaml
   - default-project.yaml
   - namespaces.yaml
