--- a/cluster/applications.yaml
+++ b/cluster/applications.yaml
@@ -1,29 +1,29 @@
-#---
-#apiVersion: argoproj.io/v1alpha1
-#kind: Application
-#metadata:
-#  name: applications
-#  namespace: argocd
-#  finalizers:
-#    - resources-finalizer.argocd.argoproj.io
-#spec:
-#  project: default
-#  source:
-#    path: cluster/applications
-#    repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
-#    targetRevision: 0.0.6
-#  destination:
-#    namespace: argocd
-#    server: https://kubernetes.default.svc
-#  syncPolicy:
-#    automated:
-#      allowEmpty: true
-#      prune: true
-#      selfHeal: true
-#    syncOptions:
-#      - allowEmpty=true
-#  ignoreDifferences:
-#    - group: argoproj.io
-#      jsonPointers:
-#        - /status
-#      kind: Application
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: applications
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  project: default
+  source:
+    path: cluster/applications
+    repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
+    targetRevision: 0.0.7
+  destination:
+    namespace: argocd
+    server: https://kubernetes.default.svc
+  syncPolicy:
+    automated:
+      allowEmpty: true
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - allowEmpty=true
+  ignoreDifferences:
+    - group: argoproj.io
+      jsonPointers:
+        - /status
+      kind: Application
