--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -1,44 +1,44 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  name: default
-  namespace: argocd
-spec:
-  clusterResourceWhitelist:
-    - group: '*'
-      kind: '*'
-  destinations:
-    - namespace: '*'
-      server: '*'
-  sourceRepos:
-    - '*'
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: cluster
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  project: default
-  source:
-    path: cluster
-    repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
-    targetRevision: main
-  destination:
-    namespace: argocd
-    server: https://kubernetes.default.svc
-  syncPolicy:
-    automated:
-      allowEmpty: true
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - allowEmpty=true
-  ignoreDifferences:
-    - group: argoproj.io
-      jsonPointers:
-        - /status
-      kind: Application
+#---
+#apiVersion: argoproj.io/v1alpha1
+#kind: AppProject
+#metadata:
+#  name: default
+#  namespace: argocd
+#spec:
+#  clusterResourceWhitelist:
+#    - group: '*'
+#      kind: '*'
+#  destinations:
+#    - namespace: '*'
+#      server: '*'
+#  sourceRepos:
+#    - '*'
+#---
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: cluster
+#  namespace: argocd
+#  finalizers:
+#    - resources-finalizer.argocd.argoproj.io
+#spec:
+#  project: default
+#  source:
+#    path: cluster
+#    repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
+#    targetRevision: main
+#  destination:
+#    namespace: argocd
+#    server: https://kubernetes.default.svc
+#  syncPolicy:
+#    automated:
+#      allowEmpty: true
+#      prune: true
+#      selfHeal: true
+#    syncOptions:
+#    - allowEmpty=true
+#  ignoreDifferences:
+#    - group: argoproj.io
+#      jsonPointers:
+#        - /status
+#      kind: Application
