--- a/environments/local/kustomization.yaml
+++ b/environments/local/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - cluster.yaml
+#  - cluster.yaml
   - ../../cluster
 patches:
   - target:
@@ -11,6 +11,10 @@ patches:
       name: cluster
     patch: |
       - op: add
+        path: /spec/source/path
+        value:
+          environments/local
+      - op: add
         path: /spec/source/targetRevision
         value:
-          0.0.11
+          0.0.12
