--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - applications.yaml
+#  - applications.yaml
   - argocd.yaml
   - cluster.yaml
   - namespaces.yaml
