remove cluster application from cluster itself

--- a/environments/local/cluster.yaml
+++ b/environments/local/cluster.yaml
@@ -24,6 +24,7 @@ metadata:
 spec:
   project: default
   source:
+    path: cluster
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
   destination:
     namespace: argocd
