--- a/environments/local/kustomization.yaml
+++ b/environments/local/kustomization.yaml
@@ -3,16 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - ../../cluster
+  - cluster.yaml
 patches:
   - target:
       kind: Application
       name: cluster
     patch: |
-      - op: add
-        path: /spec/source/path
-        value:
-          environments/local
       - op: add
         path: /spec/source/targetRevision
         value:
