--- a/cluster/services/metrics-server.yaml
+++ b/cluster/services/metrics-server.yaml
@@ -1,21 +1,21 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: metrics-server-release
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  project: default
-  source:
-    path: overlays/local
-    repoURL: https://github.com/IanHewlett/demo-platform-service-metrics-server.git
-    targetRevision: 0.0.2
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: argocd
-  syncPolicy:
-    automated:
-      selfHeal: true
-      prune: true
+#---
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: metrics-server-release
+#  namespace: argocd
+#  finalizers:
+#    - resources-finalizer.argocd.argoproj.io
+#spec:
+#  project: default
+#  source:
+#    path: overlays/local
+#    repoURL: https://github.com/IanHewlett/demo-platform-service-metrics-server.git
+#    targetRevision: 0.0.2
+#  destination:
+#    server: https://kubernetes.default.svc
+#    namespace: argocd
+#  syncPolicy:
+#    automated:
+#      selfHeal: true
+#      prune: true
