--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -1,28 +1,37 @@
----
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
   name: services
   namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
-  source:
-    path: cluster/services
-    repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
-  destination:
-    namespace: argocd
-    server: https://kubernetes.default.svc
+  generators:
+  - git:
+      files:
+      - path: cluster/config/*.json
+      repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
+      requeueAfterSeconds: 20
+      revision: ""
+      template:
+        metadata: {}
+        spec:
+          destination: {}
+          project: ""
   syncPolicy:
-    automated:
-      allowEmpty: true
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - allowEmpty=true
-  ignoreDifferences:
-    - group: argoproj.io
-      jsonPointers:
-        - /status
-      kind: Application
+    preserveResourcesOnDeletion: true
+  template:
+    metadata:
+      name: '{{name}}-release'
+      namespace: argocd
+    spec:
+      project: default
+      source:
+        path: '{{target_path}}'
+        repoURL: 'https://github.com/IanHewlett/demo-platform-service-{{name}}.git'
+        targetRevision: '{{version}}'
+      destination:
+        server: "https://kubernetes.default.svc"
+        namespace: argocd
+      syncPolicy:
+        automated:
+          allowEmpty: true
+          selfHeal: true
