--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -7,7 +7,7 @@ spec:
   generators:
   - git:
       files:
-      - path: cluster/config/*.json
+      - path: cluster/services/*.json
       repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
       requeueAfterSeconds: 20
       revision: ""
