--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -26,7 +26,7 @@ spec:
       project: default
       source:
         path: '{{target_path}}'
-        repoURL: 'https://github.com/IanHewlett/demo-platform-service-{{name}}.git'
+        repoURL: '{{target_url}}'
         targetRevision: '{{target_version}}'
       destination:
         server: "https://kubernetes.default.svc"
