split services json into individual configs per service

--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -1,8 +1,11 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: services
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   generators:
   - git:
