--- a/cluster/namespaces.yaml
+++ b/cluster/namespaces.yaml
@@ -6,14 +6,27 @@ metadata:
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
+
 spec:
   project: default
+
   source:
-    path: cluster/namespaces
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
+    path: cluster/namespaces
+    kustomize:
+      patches:
+        - target:
+            kind: Namespace
+            name: istio-system
+          patch: |-
+            - op: replace
+              path: /metadata/labels/"topology.istio.io/network"
+              value: minikube-local
+
   destination:
-    namespace: argocd
     server: https://kubernetes.default.svc
+    namespace: argocd
+
   syncPolicy:
     automated:
       allowEmpty: true
@@ -21,6 +34,7 @@ spec:
       selfHeal: true
     syncOptions:
       - allowEmpty=true
+
   ignoreDifferences:
     - group: argoproj.io
       jsonPointers:
