--- a/cluster/namespaces.yaml
+++ b/cluster/namespaces.yaml
@@ -13,15 +13,17 @@ spec:
   source:
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
     path: cluster/namespaces
+
     kustomize:
       patches:
-        - target:
-            kind: Namespace
-            name: istio-system
-          patch: |-
-            - op: add
-              path: /metadata/labels/topology\.istio\.io/network
-              value: minikube-local
+      - target:
+          kind: Namespace
+          name: istio-system
+        patch: |
+          - op: add
+            path: /metadata/labels/topology.istio.io~1network
+            value:
+              minikube-local
 
   destination:
     server: https://kubernetes.default.svc
