test changing label value directly

--- a/cluster/namespaces/istio-system.yaml
+++ b/cluster/namespaces/istio-system.yaml
@@ -4,4 +4,4 @@ kind: Namespace
 metadata:
   name: istio-system
   labels:
-    topology.istio.io/network: cluster-name
+    topology.istio.io/network: new-cluster-name
