test deploy with empty kustomize patch list in application config

--- a/cluster/namespaces.yaml
+++ b/cluster/namespaces.yaml
@@ -14,8 +14,8 @@ spec:
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
     path: cluster/namespaces
 
-#    kustomize:
-#      patches:
+    kustomize:
+      patches: []
 #      - target:
 #          kind: Namespace
 #          name: istio-system
