--- a/environments/local/kustomization.yaml
+++ b/environments/local/kustomization.yaml
@@ -18,11 +18,18 @@ patches:
         value:
           environments/local
 
-#  - target:
-#      kind: Application
-#      name: namespaces
-#    patch: |
-#      - op: add
-#        path: /metadata/labels/topology.istio.io~1network
-#        value:
-#          minikube-local
+  - target:
+      kind: Application
+      name: namespaces
+    patch: |
+      - op: add
+        path: /spec/source/kustomize/patches/-
+        value:
+          - target:
+              kind: Namespace
+              name: istio-system
+            patch: |
+              - op: add
+                path: /metadata/labels/topology.istio.io~1network
+                value:
+                  minikube-local
