test bootstrapping from overlay with cluster application in cluster dir

--- a/environments/local/kustomization.yaml
+++ b/environments/local/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 namespace: argocd
 
 resources:
-  - default-project.yaml
-  - cluster.yaml
+#  - default-project.yaml
+#  - cluster.yaml
   - ../../cluster
 
 patches:
