--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: argocd
 resources:
   - argocd.yaml
-#  - default-project.yaml
-#  - cluster.yaml
+  - default-project.yaml
+  - cluster.yaml
   - namespaces.yaml
   - services.yaml
