update overlay sync paths

--- a/environments/local/us-west-0/kustomization.yaml
+++ b/environments/local/us-west-0/kustomization.yaml
@@ -14,7 +14,7 @@ patches:
       - op: add
         path: /spec/source/path
         value:
-          environments/local
+          environments/local/us-west-0
 
   - target:
       kind: Application
