--- a/environments/local/namespaces/kustomization.yaml
+++ b/environments/local/namespaces/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - cert-manager.yaml
   - connaisseur.yaml
-  - istio-system.yaml
+#  - istio-system.yaml
   - wiremock.yaml
