--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - argocd.yaml
   - default-project.yaml
   - cluster.yaml
-  - namespaces.yaml
+#  - namespaces.yaml
 #  - services.yaml
