test: re-add namespaces application and services applicationset

--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - argocd.yaml
   - default-project.yaml
   - cluster.yaml
-#  - namespaces.yaml
-#  - services.yaml
+  - namespaces.yaml
+  - services.yaml
