--- a/environments/local-minikube-us-west-0/kustomization.yaml
+++ b/environments/local-minikube-us-west-0/kustomization.yaml
@@ -1,10 +1,10 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: argocd
 
 resources:
   - ../../cluster
+  - ../local/namespaces
 
 components:
   - ../local
@@ -20,17 +20,10 @@ patches:
           environments/local-minikube-us-west-0
 
   - target:
-      kind: Application
-      name: namespaces
+      kind: Namespace
+      name: istio-system
     patch: |
       - op: add
-        path: /spec/source/kustomize/patches/-
+        path: /metadata/labels/topology.istio.io~1network
         value:
-          target:
-            kind: Namespace
-            name: istio-system
-          patch: |
-            - op: add
-              path: /metadata/labels/topology.istio.io~1network
-              value:
-                local-minikube-us-west-0
+          local-minikube-us-west-0
