--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -14,6 +14,12 @@ spec:
           - path: cluster/services/*.json
         repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
         requeueAfterSeconds: 20
+        revision: ""
+        template:
+          metadata: {}
+          spec:
+            destination: {}
+            project: ""
 
   syncPolicy:
     preserveResourcesOnDeletion: false
