--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   - ../../cluster
   - ../local/namespaces
+  - external-secrets-cluster-secrets.yaml
 
 components:
   - ../local
