add application specifically for cluster secrets to test

--- a/environments/local-minikube-us-east-0/external-secrets-cluster-secrets.yaml
+++ b/environments/local-minikube-us-east-0/external-secrets-cluster-secrets.yaml
@@ -18,8 +18,8 @@ spec:
     kustomize:
       patches:
         - target:
-            kind: Application
-            name: cluster
+            kind: ClusterSecretStore
+            name: vault-admin
           patch: |
             - op: add
               path: /spec/provider/vault/server
