--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ../../cluster
   - ../local/namespaces
-  - ../local/external-secrets-cluster-secrets.yaml
+  - ../local/resources
 
 components:
   - ../local
