use main for service versions in local env

--- a/environments/local/resources/external-secrets-cluster-secrets.yaml
+++ b/environments/local/resources/external-secrets-cluster-secrets.yaml
@@ -14,7 +14,7 @@ spec:
   source:
     repoURL: https://github.com/IanHewlett/demo-platform-service-external-secrets.git
     path: secrets
-    targetRevision: 0.0.5
+    targetRevision: main
 
   destination:
     server: https://kubernetes.default.svc
