--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -49,3 +49,21 @@ patches:
                 path: /spec/provider/vault/auth/kubernetes/mountPath
                 value:
                   local-minikube-us-east-0
+
+  - target:
+      kind: Application
+      name: istiod-release
+    patch: |
+      - op: add
+        path: /spec/source/kustomize
+        value:
+          patches:
+            - target:
+                kind: Application
+                name: istiod
+              patch: |
+                - op: add
+                  path: /spec/sources/0/helm/parameters/-
+                  value:
+                    name: global.network
+                    value: local-minikube-us-east-0
