add cluster env overlay patch for istiod release

--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -63,7 +63,7 @@ patches:
                 name: istiod
               patch: |
                 - op: add
-                  path: /spec/sources/0/helm/parameters/-
-                  value:
-                    name: global.network
-                    value: local-minikube-us-east-0
+                  path: /spec/sources/0/helm/parameters
+                  - value:
+                      name: global.network
+                      value: local-minikube-us-east-0
