test cluster env overlay patch for istiod release

--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -67,3 +67,5 @@ patches:
                   value:
                     - name: global.network
                       value: local-minikube-us-east-0
+                    - name: pilot.replicaCount
+                      value: 2
