test cluster env overlay patch for istiod release

--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -68,4 +68,4 @@ patches:
                     - name: global.network
                       value: local-minikube-us-east-0
                     - name: pilot.replicaCount
-                      value: 2
+                      value: '2'
