--- a/environments/local/resources/kustomization.yaml
+++ b/environments/local/resources/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 
 resources:
   - external-secrets-cluster-secrets.yaml
-  - istio-base.yaml
+#  - istio-base.yaml
   - istiod.yaml
