--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   - ../../cluster
   - ../local/resources
 
-components:
-  - ../local
+#components:
+#  - ../local
 
 patches:
   - target:
