add optional helm value overrides to services template patch

--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -91,4 +91,6 @@ spec:
                   value:
                     - name: global.network
                       value: local-minikube-us-east-0
+                    - name: pilot.replicaCount
+                      value: 2
     {{- end }}
