add optional helm value overrides to services template patch

--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -92,5 +92,5 @@ spec:
                     - name: global.network
                       value: local-minikube-us-east-0
                     - name: pilot.replicaCount
-                      value: 2
+                      value: '2'
     {{- end }}
